--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Fertility registry</h3>
-                        <p>branding, packaging, illustration</p>
+                        <h3>Fertility Tracker</h3>
+                        <p>Product design - Manufacture files</p>
                       </div>
                     </div>
-                    <img src="images/producto1.jpeg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/producto1.jpeg" class="lazyload  img-fluid" />
                   </a>
               </div>
 
