--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -122,7 +122,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Fertility registry</h2>
+            <h2 class="heading-portfolio-single-h2">Fertility Tracker</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
@@ -136,34 +136,26 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                        <p>Fertility tracker for home use. 
+                          This object was developed from the idea to give information to people with uterus about what’s going on in their bodies in all the different stages of their period. Together with doctors we developed this easy to use product with medical support and technology.</p>
                       </div>
                     </div>
 
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
-                      </div>
+                    
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Design</a>, <a href="#">Product Development</a></span>
+                        <span class="detail-val"><p>Product design</p>, <p>Manufacture files</p></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                        <span class="detail-val">University of Buenos Aires</span>
                       </div>
                     </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
-                      </div>
-                    </div>
+                    
                   </div>
                 </div> 
               </div>
