--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -146,7 +146,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><p>Product design</p>, <p>Manufacture files</p></span>
+                        <span class="detail-val"><p>Product design, Manufacture files</p></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
