--- a/portfolio-biome.html
+++ b/portfolio-biome.html
@@ -138,34 +138,25 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                        <p>Packaging for medical product. 
+                          Development of packaging for gut microbiome test kit. Illustration, marketing and box design with slicing closure. Interior components provided by medical company.</p>
                       </div>
                     </div>
 
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
-                      </div>
-                    </div>
+                    
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Design</a>, <a href="#">Product Development</a></span>
+                        <span class="detail-val"><p>Packaging design, Marketing, Illustration</p></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
+                        <span class="detail-val">SBiome</span>
                       </div>
                     </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
-                      </div>
-                    </div>
+                  
                   </div>
                 </div> 
               </div>
