--- a/portfolio-everest.html
+++ b/portfolio-everest.html
@@ -122,7 +122,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Fertility registry</h2>
+            <h2 class="heading-portfolio-single-h2">Everest Humidifier</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
@@ -136,32 +136,20 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                        <p>Exterior case design made from injected plastic. We developed the user interface and morphology of the product with the objective of generating a product that resembles the fresh and healthy air of the mountains. We worked on the branding and used it as guide line for the website templates.</p>
                       </div>
                     </div>
 
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
-                        <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
-                      </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Design</a>, <a href="#">Product Development</a></span>
+                        <span class="detail-val"><p>Product design, Branding, Web site design</p></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
-                      </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
+                        <span class="detail-val">Everest</span>
                       </div>
                     </div>
                   </div>
