--- a/index.html
+++ b/index.html
@@ -232,15 +232,15 @@
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="portfolio-beeo.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-                        <p>branding, packaging</p>
+                        <h3>Biodegradable Straw Machine</h3>
+                        <p>Idea - Product design - Prototype - Manufacturing Files</p>
                       </div>
                     </div>
-                    <img src="images/g fina home-03.jpg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/beeoProject.jpg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
              
@@ -610,7 +610,7 @@
                   <a href="https://wa.me/91164129158" target="_blank" class="contact-info-val">+54 911 6412 9158</a>
                 </div>
                 <div class="gsap-reveal d-block">
-                  <span class="d-block contact-info-label">Address</span>
+                  <span class="d-block contact-info-label">Location</span>
                   <address class="contact-info-val">Worldwide.<br> Today in Australia.</address>
                 </div>
               </div>
@@ -626,7 +626,7 @@
           <div class="row justify-content-center">
             <div class="col-md-7">
               
-              <div class="footer-site-logo"><a href="#">G Fina Studio<span></span></a></div>
+              <div class="footer-site-logo"><a href="#">G Fina Studio<span></span></a></div><p>A project by Anita Dalbene</p>
 
               <ul class="footer-site-social">
                 <li><a href="https://www.behance.net/anitadalbene" target="_blank" >Behance</a></li>
