--- a/portfolio-litterBox.html
+++ b/portfolio-litterBox.html
@@ -127,8 +127,9 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/Daily - Fertility Tracker - copia (2).png" alt="Image" class="img-fluid"></a></p>
-              
+                <p><a href="images/litter1.png" data-fancybox="gal"><img src="images/litter1.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/litter2.png" data-fancybox="gal"><img src="images/litter2.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/litter3.png" data-fancybox="gal"><img src="images/litter3.png" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
@@ -149,7 +150,7 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val"></span>
+                        <span class="detail-val">Mau Pets</span>
                       </div>
                     </div>
                   </div>
