--- a/portfolio-medicalSampler.html
+++ b/portfolio-medicalSampler.html
@@ -122,13 +122,15 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Medical sampler</h2>
+            <h2 class="heading-portfolio-single-h2">Medical Sampler Machine</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/Daily - Fertility Tracker - copia (2).png" alt="Image" class="img-fluid"></a></p>
-              
+                <p><a href="images/medical1.png" data-fancybox="gal"><img src="images/medical1.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical2.png" data-fancybox="gal"><img src="images/medical2.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical3.png" data-fancybox="gal"><img src="images/medical3.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical4.jpg" data-fancybox="gal"><img src="images/medical4.jpg" alt="Image" class="img-fluid"></a></p>             
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
