--- a/portfolio-beeo.html
+++ b/portfolio-beeo.html
@@ -100,7 +100,7 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reshape</h1>
+              <h1 class="heading" data-aos="fade-up">Reworking</h1>
               <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the countries.</h2>
             </div>
 
@@ -121,114 +121,47 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
-            <h2 class="heading-portfolio-single-h2">Reshape</h2>
 
-            <div class="row gutter-v4 align-items-stretch mb-5">
-              <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
+            <h2 class="heading-portfolio-single-h2">Biodegradable Straw Machine</h2>
 
-                <a href="images/post_1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal" data-caption="A nice caption will be place here">
-                  <div class="overlay">
-                    <div class="portfolio-item-content">
-                      <h3>A nice caption will be place here</h3>
+            <div class="row justify-content-between align-items-stretch">
+
+              <div class="col-lg-8">
+                <p><a href="images/beeo.png" data-fancybox="gal"><img src="images/beeo.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/beeo2.jpg" data-fancybox="gal"><img src="images/beeo2.jpg" alt="Image" class="img-fluid"></a></p>
+              </div>
+              <div class="col-lg-4 pl-lg-5">
+                <div class="unslate_co--sticky">
+                  <div class="row">
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Project Description</span>
+                        <p>Exterior case design made from injected plastic. We developed the user interface and morphology of the product with the objective of generating a product that resembles the fresh and healthy air of the mountains. We worked on the branding and used it as guide line for the website templates.</p>
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Role</span>
+                        <span class="detail-val"><p>Idea, Product design, Prototype, Manufacturing Files</p></span>
+                      </div>
+                    </div>
+                    <div class="col-md-12 mb-4">
+                      <div class="detail-v1">
+                        <span class="detail-label">Client</span>
+                        <span class="detail-val">BeeO</span>
+                      </div>
                     </div>
                   </div>
-                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
-                </a>
-
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
-                </a>
-              </div>
-
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-
-                <a href="images/post_3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
-                </a>
-
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_4.jpg" class="lazyload" alt="Image" />
-                </a>
-              </div>
-
-              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
-                <a href="images/post_5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
-                  <div class="overlay"></div>
-                  <img src="images/post_5.jpg" class="lazyload" alt="Image" />
-                </a>
+                </div> 
               </div>
 
             </div>
 
-            <div class="row justify-content-between mb-5">
-              <div class="col-12 mb-5">
-                <div class="row">
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Role</span>
-                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Client</span>
-                      <span class="detail-val">unslate</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="detail-v1">
-                      <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="#">https:///</a></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              </div>
-              <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              </div>
-            </div>
-
-            <div class="row justify-content-center mb-5">
-              <div class="col-md-12">
-                <div class="testimonial-v1">
-                  <div class="testimonial-inner-bg">
-                    <span class="quote">&ldquo;</span>
-                    <blockquote>
-                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-                    </blockquote>
-                  </div>
-
-                  <div class="testimonial-author-info">
-                    <img src="images/person_man_1.jpg" alt="Image">
-                    <h3>Eric Ingram</h3>
-                    <span class="d-block position">Product Designer @facebook</span>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-          
           </div>
         </div>
       </div>
-    </div> 
+    </div>
 
     <footer class="unslate_co--footer unslate_co--section">
       <div class="container">
@@ -261,6 +194,7 @@
 
   <script src="js/scripts-dist.js"></script>
   <script src="js/main.js"></script>
+
 
 </body>
 
