--- a/portfolio-everest.html
+++ b/portfolio-everest.html
@@ -127,8 +127,8 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/Daily - Fertility Tracker - copia (2).png" alt="Image" class="img-fluid"></a></p>
-              
+                <p><a href="images/everest2.png" data-fancybox="gal"><img src="images/everest2.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/everest2.jpg" data-fancybox="gal"><img src="images/everest2.jpg" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
