--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Biome</h3>
+                        <h3>Gut Microbiome Test</h3>
                         <p>Packaging design - Marketing - Illustration</p>
                       </div>
                     </div>
@@ -176,7 +176,7 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Medical sampler machine</h3>
+                        <h3>Medical Sampler Machine</h3>
                         <p>Reverse engineering - Presentation</p>
                       </div>
                     </div>
@@ -188,7 +188,7 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Blueligth</h3>
+                        <h3>UVC Sterilizer</h3>
                         <p>Product design - Manufacture files</p>
                       </div>
                     </div>
