--- a/portfolio-biome.html
+++ b/portfolio-biome.html
@@ -124,7 +124,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Biome</h2>
+            <h2 class="heading-portfolio-single-h2">Gut Microbiome Test</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
