--- a/portfolio-blueligth.html
+++ b/portfolio-blueligth.html
@@ -122,7 +122,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Case Design</h2>
+            <h2 class="heading-portfolio-single-h2">UVC Sterilizer</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
