--- a/portfolio-biome.html
+++ b/portfolio-biome.html
@@ -129,7 +129,7 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/Biome Packaging.png" data-fancybox="gal"><img src="images/Biome Packaging.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/Biome Packaging.jpg" data-fancybox="gal"><img src="images/Biome Packaging.jpg" alt="Image" class="img-fluid"></a></p>
               
               </div>
               <div class="col-lg-4 pl-lg-5">
