--- a/portfolio-blueligth.html
+++ b/portfolio-blueligth.html
@@ -127,8 +127,8 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/Bluelight- reduce.png" data-fancybox="gal"><img src="images/Bluelight- reduce.png" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/Bluelight (1).png" data-fancybox="gal"><img src="images/Bluelight (1).png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/Bluelight-.jpg" data-fancybox="gal"><img src="images/Bluelight-.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/Bluelight (1).jpg" data-fancybox="gal"><img src="images/Bluelight (1).jpg" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
