--- a/portfolio-everest.html
+++ b/portfolio-everest.html
@@ -127,7 +127,7 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/everest2.png" data-fancybox="gal"><img src="images/everest2.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/everest22.jpg" data-fancybox="gal"><img src="images/everest22.jpg" alt="Image" class="img-fluid"></a></p>
                 <p><a href="images/everest2.jpg" data-fancybox="gal"><img src="images/everest2.jpg" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
