--- a/portfolio-fertility.html
+++ b/portfolio-fertility.html
@@ -127,7 +127,7 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/Daily - Fertility Tracker -  (2).png" data-fancybox="gal"><img src="images/Daily - Fertility Tracker -  (2).png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/Daily - Fertility Tracker - .jpg" data-fancybox="gal"><img src="images/Daily - Fertility Tracker - .jpg" alt="Image" class="img-fluid"></a></p>
               
               </div>
               <div class="col-lg-4 pl-lg-5">
