--- a/portfolio-litterBox.html
+++ b/portfolio-litterBox.html
@@ -127,9 +127,9 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/litter1.png" data-fancybox="gal"><img src="images/litter1.png" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/litter2.png" data-fancybox="gal"><img src="images/litter2.png" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/litter3.png" data-fancybox="gal"><img src="images/litter3.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/litter1.jpg" data-fancybox="gal"><img src="images/litter1.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/litter2.jpg" data-fancybox="gal"><img src="images/litter2.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/litter3.jpg" data-fancybox="gal"><img src="images/litter3.jpg" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
