--- a/portfolio-medicalSampler.html
+++ b/portfolio-medicalSampler.html
@@ -127,9 +127,9 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/medical1.png" data-fancybox="gal"><img src="images/medical1.png" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/medical2.png" data-fancybox="gal"><img src="images/medical2.png" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/medical3.png" data-fancybox="gal"><img src="images/medical3.png" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical1.jpg" data-fancybox="gal"><img src="images/medical1.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical2.jpg" data-fancybox="gal"><img src="images/medical2.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/medical3.jpg" data-fancybox="gal"><img src="images/medical3.jpg" alt="Image" class="img-fluid"></a></p>
                 <p><a href="images/medical4.jpg" data-fancybox="gal"><img src="images/medical4.jpg" alt="Image" class="img-fluid"></a></p>             
               </div>
               <div class="col-lg-4 pl-lg-5">
