--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     
                   </div>
                 </div>
-                <img src="images/pro.jpg" class="lazyload" alt="Image" />
+                <img src="images/image22.jpg" class="lazyload" alt="Image" />
               </div>
 
 
