--- a/portfolio-blueligth.html
+++ b/portfolio-blueligth.html
@@ -128,8 +128,8 @@
 
               <div class="col-lg-8">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/UWjcbG3nx1Y?si=dNhp-1oqF1u9cYtq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <p><a href="images/Bluelight-.jpg" data-fancybox="gal"><img src="images/Bluelight-.jpg" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/Bluelight (1).jpg" data-fancybox="gal"><img src="images/Bluelight (1).jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/blueligth2.jpeg" data-fancybox="gal"><img src="images/blueligth2.jpeg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/blueligth3.jpeg" data-fancybox="gal"><img src="images/blueligth3.jpeg" alt="Image" class="img-fluid"></a></p>
 
               </div>
               <div class="col-lg-4 pl-lg-5">
