--- a/portfolio-beeo.html
+++ b/portfolio-beeo.html
@@ -127,8 +127,8 @@
             <div class="row justify-content-between align-items-stretch">
 
               <div class="col-lg-8">
-                <p><a href="images/beeo.jpg" data-fancybox="gal"><img src="images/beeo.jpg" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/beeo2.jpg" data-fancybox="gal"><img src="images/beeo2.jpg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/beeo2.jpeg" data-fancybox="gal"><img src="images/beeo2.jpeg" alt="Image" class="img-fluid"></a></p>
+                <p><a href="images/beeo3.jpeg" data-fancybox="gal"><img src="images/beeo3.jpeg" alt="Image" class="img-fluid"></a></p>
               </div>
               <div class="col-lg-4 pl-lg-5">
                 <div class="unslate_co--sticky">
