--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description" content="">
-    <meta name="keywords" content="html, css, javascript, jquery">
+    <meta name="keywords" content="design, designer, industrial, industrial designer, innovation, future, ux, 3d modeling, branding, 2d,">
     <meta name="author" content="">
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
@@ -208,28 +208,28 @@
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="portfolio-perfume.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                    <div class="overlay">
+                      <span class="wrap-icon icon-link2"></span>
+                      <div class="portfolio-item-content">
+                        <h3>Perfume Bottle and Packaging</h3>
+                        <p>Branding - Packaging - Product Design</p>
+                      </div>
+                    </div>
+                    <img src="images/perfume.jpeg" class="lazyload  img-fluid" alt="Images" />
+                  </a>
+              </div>
+              <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+                <a href="portfolio-perfume.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3></h3>
-                        <p>branding, packaging</p>
+
+                        <p>Branding - Packaging - Product Design</p>
                       </div>
                     </div>
                     <img src="images/sunglasses.jpeg" class="lazyload  img-fluid" alt="Images" />
-                  </a>
-              </div>
-              <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
-                    <div class="overlay">
-                      <span class="wrap-icon icon-link2"></span>
-                      <div class="portfolio-item-content">
-                        <h3>Modern Building</h3>
-
-                        <p>branding, packaging</p>
-                      </div>
-                    </div>
-                    <img src="images/producto4.jpeg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
