--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/vendor/aos.css">
     <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="css/vendor/jquery.fancybox.min.css">
-    <link rel="shortcut icon" href="images/iconito.jpg">
+    <link rel="shortcut icon" href="images/iconito.png">
     
 
     <!-- Theme Style -->
@@ -159,15 +159,15 @@
               </div>
 
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
-                <a href="portfolio-biome.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
+                <a href="portfolio-perfume.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Gut Microbiome Test</h3>
-                        <p>Packaging design - Marketing - Illustration</p>
+                        <h3>Perfume Bottle and Packaging</h3>
+                        <p>Branding - Packaging - Product Design</p>
                       </div>
                     </div>
-                    <img src="images/biome1.jpeg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/perfumee.jpeg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
 
@@ -208,15 +208,15 @@
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-perfume.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="portfolio-biome.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>Perfume Bottle and Packaging</h3>
-                        <p>Branding - Packaging - Product Design</p>
+                        <h3>Gut Microbiome Test</h3>
+                        <p>Packaging design - Marketing - Illustration</p>
                       </div>
                     </div>
-                    <img src="images/perfume.jpeg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/biome1.jpeg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
