--- a/portfolio-perfume.html
+++ b/portfolio-perfume.html
@@ -122,7 +122,7 @@
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
 
-            <h2 class="heading-portfolio-single-h2">Litter box pot</h2>
+            <h2 class="heading-portfolio-single-h2">Perfume Bottle and Packaging</h2>
 
             <div class="row justify-content-between align-items-stretch">
 
@@ -137,20 +137,20 @@
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Project Description</span>
-                        <p>Concept, product and tech pack design. We developed every stage of the project to manufacture a hybrid product, both litter box and pot. We focus on the double functionality of the product to incorporate it in the home saving space at the same time. Interchangeable filters on the inside so the smell doesn’t reach the exterior.</p>
+                        <p>Richwell perfume is created based on simplicity evocating an elegant and distinct actitude. We designed the 50ml bottle and reached to the final product for manufacturing after some concept exploration. The branding for both the packaging and label is inspire in different cities of France depending on each of the 4 different fragances.</p>
                       </div>
                     </div>
 
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Role</span>
-                        <span class="detail-val"><p>Product design, Manufacturing development</p></span>
+                        <span class="detail-val"><p>Branding, Packaging, Product Design</p></span>
                       </div>
                     </div>
                     <div class="col-md-12 mb-4">
                       <div class="detail-v1">
                         <span class="detail-label">Client</span>
-                        <span class="detail-val">Mau Pets</span>
+                        <span class="detail-val">Richwell</span>
                       </div>
                     </div>
                   </div>
