--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="">
+    <meta name="description" content="This is an independent industrial design studio, which is based on the values ​​of innovation, development, the sustainability of the chosen materials, and the combination of vintage and futuristic design. Passionate, efficient and creative industrial designer.">
     <meta name="keywords" content="design, designer, industrial, industrial designer, innovation, future, ux, 3d modeling, branding, 2d,">
-    <meta name="author" content="">
+    <meta name="author" content="Rodrigo Taich">
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
