--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-perfume.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="portfolio-sunglasses.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3></h3>
+                        <h3>Interchangeable Lenses</h3>
 
-                        <p>Branding - Packaging - Product Design</p>
+                        <p>Product design - Branding - Packaging Design - Engineering</p>
                       </div>
                     </div>
                     <img src="images/sunglasses.jpeg" class="lazyload  img-fluid" alt="Images" />
