--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <p>Product design - Branding - Web site design</p>
                       </div>
                     </div>
-                    <img src="images/everest.jpeg" class="lazyload  img-fluid" alt="Images" />
+                    <img src="images/everest3.jpeg" class="lazyload  img-fluid" alt="Images" />
                   </a>
               </div>
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
