--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/vendor/aos.css">
   <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
   <link rel="stylesheet" href="css/vendor/jquery.fancybox.min.css">
-  <link rel="shortcut icon" href="images/iconito.png">
+  <link rel="shortcut icon" href="images/log roj.png">
 
 
   <!-- Theme Style -->
